--- a/src/View/HomePageView.css
+++ b/src/View/HomePageView.css
@@ -6,12 +6,14 @@
         background-position: center center;
         opacity: 0;
         transition: opacity 3s ease-in-out;
-   
+}
+
+.visible {
+        opacity: 1;
 }
 
 @media (max-width: 700px) {
-    .homePageHolder {
-        height: auto;
+        .homePageHolder {
+                height: auto;
+        }
 }
-}
-
