--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -20,8 +20,10 @@
 
 #first-lastname,
 #second-lastname {
-    max-width: 130px
-}
+    width: 96%;
+    margin: 2px;
+    margin-top: 10px;
+   }
 
 .input {
     height: 35px;
@@ -117,11 +119,7 @@ p{
     .formulary {
         margin: 0 20%;
     }
-
-    #first-lastname,
-    #second-lastname {
-        max-width: 100%;
-    }
+    
 }
 
 @media screen and (max-width: 650px) {
@@ -130,8 +128,4 @@ p{
         margin: 5px;
     }
 
-    #first-lastname,
-    #second-lastname {
-        max-width: 160px
-    }
 }
