--- a/src/components/Wheel/Wheel.css
+++ b/src/components/Wheel/Wheel.css
@@ -12,7 +12,7 @@
 }
 
 #tables {
-    width: 60%;
+    width: 50%;
     display: flex;
     gap: 5%;
     align-items: center;
@@ -34,18 +34,8 @@ td {
 
 #tableUsers thead tr th,
 #tableDoomed thead tr th {
-    /* border-radius: 20px 20px 0 0; */
     text-transform: uppercase;
 }
-
-/* #tableUsers tbody tr:last-child td:first-child,
-#tableDoomed tbody tr:last-child td:last-child {
-    border-radius: 0 0 20px 0;
-} */
-
-/* #tableDoomed tbody tr:last-child td:first-child {
-    border-radius: 0 0 0 20px;
-} */
 
 #tableUsers thead tr th {
     background-color: #d4e2d4;
@@ -53,6 +43,13 @@ td {
 
 #tableUsers tbody tr:nth-child(2n+1) {
     background-color: #FFF;
+}
+
+#tableUsers #btnAdd {
+    background-image: url('public/images/add-icon.svg');
+    background-position: center;
+    width: 25px;
+    height: 25px;
 }
 
 #tableDoomed tbody {
@@ -66,8 +63,14 @@ td {
     background-color: #f8dbdc;
 }
 
+#tableDoomed #btnRemove {
+    background-image: url('/public/images/delete-icon.svg');
+    width: 25px;
+    height: 25px;
+}
+
 .roulette {
-    width: 40%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,10 +80,8 @@ td {
     width: fit-content;
 }
 
-@media screen and (max-width: 1300px) {
-    canvas {
-        width: 450px;
-    }
+.roulette canvas {
+    width: 80%;
 }
 
 @media screen and (max-width: 1000px) {
@@ -93,51 +94,11 @@ td {
         width: 100%;
         flex-wrap: wrap;
     }
-
-    canvas {
-        width: 500px;
-    }
 }
 
 @media screen and (max-width: 700px) {
     #tables {
         flex-direction: column;
         gap: 0;
-    }
-
-    canvas {
-        width: 500px;
-    }
-    
-}
-
-@media screen and (max-width: 500px) {
-    canvas {
-        width: 400px;
-    }
-    
-}
-
-@media screen and (max-width: 420px) {
-    canvas {
-        width: 350px;
-    }
-}
-
-@media screen and (max-width: 350px) {
-    canvas {
-        width: 300px;
-    }
-}
-
-@media screen and (max-width: 300px) {
-    canvas {
-        width: 250px;
-    }
-}
-
-@media screen and (max-width: 250px) {
-    canvas {
-        width: 200px;
     }
 }
