--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -23,7 +23,7 @@
     width: 96%;
     margin: 2px;
     margin-top: 10px;
-   }
+}
 
 .input {
     height: 35px;
@@ -33,7 +33,10 @@
     background-color: white;
     font-size: 18px;
 }
-#rol, #level, #danceClass {
+
+#rol,
+#level,
+#danceClass {
     height: 39px;
 }
 
@@ -44,7 +47,7 @@
 
 .formTableHolder {
     display: grid;
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: 310px 1fr;
     gap: 20px;
 }
 
@@ -79,7 +82,7 @@ table {
     width: 100%;
 }
 
-p{
+p {
     color: #8d8585;
     font-style: italic;
     text-align: justify;
@@ -122,7 +125,7 @@ p{
     .formulary {
         margin: 0 20%;
     }
-    
+
 }
 
 @media screen and (max-width: 650px) {
@@ -131,4 +134,11 @@ p{
         margin: 5px;
     }
 
+}
+
+@media screen and (max-width: 350px) {
+    .double-column {
+        display: flex;
+        flex-direction: column;
+    }
 }
