--- a/src/components/Wheel/Wheel.css
+++ b/src/components/Wheel/Wheel.css
@@ -26,6 +26,7 @@ td {
 
 #tableUsers,
 #tableDoomed {
+    max-width: 25%;
     height: fit-content;
     width: fit-content;
     margin-bottom: 5%;
