--- a/src/components/List/alert.css
+++ b/src/components/List/alert.css
@@ -12,3 +12,26 @@ button:where(.swal2-styled).swal2-confirm {
 img:where(.swal2-image){
     height: 70px;
 }
+
+/* Estilo básico de la imagen o elemento */
+.swal2-image { /* Ajusta la ruta y estilos de fondo según sea necesario */
+    animation: rotate 4s infinte infinite ;
+}
+  
+  /* Definición de la animación */
+  @keyframes rotate {
+    0%{
+      transform: rotateY(0deg); /* Ángulo de inicio (0 grados) */
+    }
+    50% {
+      transform: rotateY(180deg); /* Ángulo final (360 grados para una rotación completa) */
+    }
+    100%{
+        transform: rotateY(0deg); /* Ángulo de inicio (0 grados) */
+      }
+  }
+  
+  /* Aplicación de la animación a la clase deseada */
+  .swal2-image {
+    animation: rotate 2s infinite linear; /* 2s de duración, rotación infinita, animación lineal */
+  }
